# andys-daily-factoids

./: .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  BRAINTRUST_EVAL_PROPOSAL.md  CLAUDE.md  DESIGN.md  LLM_OBSERVABILITY.md  Makefile  PLAN.md  PREVIEW_ENVIRONMENTS.md  README.md  netlify.toml  package-lock.json  package.json  render.yaml
backend/: .env.example  DATA_MODEL.md  README.md  debug_posthog_network.py  debug_posthog_serialization.py  debug_posthog_sync.py  manage.py  pyproject.toml  test_posthog_callback_inspection.py  test_posthog_instrumented.py  test_posthog_langchain_minimal.py
backend/apps/: __init__.py
backend/apps/analytics/: __init__.py  admin.py  apps.py  models.py  services.py
backend/apps/chat/: __init__.py  admin.py  api.py  apps.py  models.py
backend/apps/core/: __init__.py  admin.py  api.py  apps.py  braintrust.py  datadog.py  langfuse.py  langsmith.py  models.py  posthog.py
backend/apps/factoids/: __init__.py  admin.py  api.py  apps.py  models.py  prompts.py  serializers.py  services.py  views.py
backend/evals/: README.md  braintrust_traces.py  create_production_dataset.py  eval.py  eval_factoid_structure.py  eval_factoid_truthfulness.py  run_evals.py  scorers.py  test_eval_setup.py  test_scorers.py
backend/factoids_project/: __init__.py  asgi.py  urls.py  wsgi.py
backend/scripts/: chat_agent_examples.py  daily_eval_cron.py  smoke_generate_factoid.py  test_braintrust_integration.py  test_braintrust_simple.py  test_generate_factoid.py  test_langfuse_integration.py  test_langfuse_simple.py  test_langsmith_integration.py  test_langsmith_simple.py  test_posthog_llm.py
tests/: README.md
(+158 files in other folders)
